# entropy_lab

./: .gitignore  README.md  pyproject.toml
.virtual_documents/notebooks/macKay_notes/: 02_probability_entropy_inference.ipynb
data/: alice_AI.txt  ogd106_preise_strom_boerse.csv  through_looking_glass_chap2.txt
entropy_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
entropy_lab/coding/: alphabet.py  code.py  decoder.py  encoder.py
entropy_lab/measures/: divergences.py  entropy.py  hartley.py  shannon.py
entropy_lab/systems/: base.py  binary_symmetric_channel.py
entropy_lab/text/: models.py  preprocessing.py  scoring.py
experiments/: experiments.ipynb
journal/: next_steps.md
notebooks/: 01_introduction_to_information_theory.ipynb  02_probability_entropy_inference.ipynb
notebooks/experiments/: electricity_playground.ipynb  electricity_shock_alarm.ipynb  human_or_AI.ipynb  medical_screening_test.ipynb  risk_slider_delta_subsets_electricity_prices.ipynb
notebooks/macKay_notes/: 02_probability_entropy_inference.ipynb  03_source_coding_theorem.ipynb
