[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-lab"
version = "0.1.0"
description = "A computational playground for entropy, information, and learning"
authors = [{ name = "Florian Dolci" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
]

[tool.setuptools]
packages = ["entropy_lab"]